--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,20 +8,41 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+
      <%= render 'layouts/shim' %>
 
   </head>
 
   <body>
-   <%= render 'layouts/header' %>
+   <!--<%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
+    </div>-->
+
+    <div class="sidenav">
+    <%= link_to "Home", root_path %>
+    <%= link_to "About", about_path %>
+    <%= link_to "Login", login_path %>
+    <%= link_to "Sign Up", signup_path%>
+    <%= link_to "Contact", contact_path %>
+  </div>
+
+    <div class="main">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
 
       <%= yield %>
-      <%= render 'layouts/footer' %>
+
+      <div class="fixed">
       <%= debug(params) if Rails.env.development? %>
+      </div>
     </div>
+    
   </body>
 </html>
