--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,23 +14,10 @@
   </head>
 
   <body>
-   <!--<%= render 'layouts/header' %>
-    <div class="container">
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
-      <%= yield %>
-      <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
-    </div>-->
 
     <div class="sidenav">
-    <%= link_to "Home", root_path %>
-    <%= link_to "About", about_path %>
-    <%= link_to "Login", login_path %>
-    <%= link_to "Sign Up", signup_path%>
-    <%= link_to "Contact", contact_path %>
-  </div>
+      <%= render 'layouts/sidebar'%>
+    </div>
 
     <div class="main">
       <% flash.each do |message_type, message| %>
