Admin console DONE

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
   <body>
 
     <div class="sidenav">
-      <%= render 'layouts/sidebar'%>
+  
+      <%= render 'layouts/admin_sidebar' %>
+  
     </div>
 
     <div class="main">
