--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -5,12 +5,9 @@
       <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
-      <section class="micropost_form">
-        <%= render 'shared/micropost_form' %>
-      </section>
     </aside>
      <div class="col-md-8">
-      <h3>Micropost Feed</h3>
+      <h3>News Feed</h3>
       <%= render 'shared/feed' %>
     </div>
   </div>
@@ -20,5 +17,6 @@
   <h1>Welcome to the News Hub</h1>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Log In!", login_path, class: "btn btn-lg btn-primary" %>
 </div>
 <% end %>
