--- a/app/views/news_feeds/_news_feed.html.erb
+++ b/app/views/news_feeds/_news_feed.html.erb
@@ -1,6 +1,6 @@
 <li id="micropost-<%= news_feed.id %>">
-  <span class="user"><%= link_to news_feed.title, news_feed.url %></span>
-  <span class="content"><%= raw news_feed.description %></span>
+  <span class="user"><%= link_to news_feed.title, news_feed.url, target: :_blank %></span>
+    <span class="content"><%= raw news_feed.description %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(news_feed.published_on) %> ago.
   </span>
