--- a/app/views/news_hubs/show.html.erb
+++ b/app/views/news_hubs/show.html.erb
@@ -1,19 +1,14 @@
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-      </h1>
-    </section>
-  </aside>
-  <div class="col-md-8">
+
+<div class="container">
+  <div class="info">
   <% if @news_hub.news_feeds.any? %>
-    <h3><%= @news_hub.name%> (<%= @news_hub.news_feeds.count %>)</h3>
-    <ol class="microposts">
+    <h1><%= @news_hub.name%> (<%= @news_hub.news_feeds.count %>)</h1>
+  </div>
+ 
+  <!-- Normal Demo-->
+  
       <%= render @news_feed %>
-    </ol>
-    <%= will_paginate @news_feed %>
-  <% end %>
+   
+<%= will_paginate @news_feed %>
+<% end %>
 </div>
-</div>
-
-
