--- a/app/views/news_feeds/_news_feed.html.erb
+++ b/app/views/news_feeds/_news_feed.html.erb
@@ -1,25 +1,28 @@
-
-<div class="column">
-    <!-- Post-->
-    <div class="post-module">
-<!-- Thumbnail-->
-  <div class="thumbnail">
-    <div class="date">
-      <div class="day"><%=news_feed.published_on.day%></div>
-      <div class="month"><%=news_feed.published_on.strftime("%B")[0..2]%></div>
-      
-      <% if news_feed.image_url != nil %>
-        </div><img src="<%=news_feed.image_url%>"/>
+<div id="reload">
+<% if current_user.have_read?(news_feed) %>
+<div id = 'overlay'>
+<%end%>
+<div class="well">
+    <div class="media">
+      <a class="pull-left" href="<%=news_feed.url%>%">
+        <% if news_feed.image_url != nil &&  news_feed.image_url != ""%>
+          <%= image_tag news_feed.image_url, :class => "media-object", :width => "150", :height => "150" %>
         <% else %>
-        </div><%= image_tag 'news-default.jpeg' %>
-      <% end %>
-  </div>
-  <!-- Post Content-->
-  <div class="post-content">
-   <!-- <div class="category">Photos</div> -->
-    <h1 class="title"><%= link_to news_feed.title, news_feed.url, target: :_blank %></h1>
-    <p class="description"><%= truncate("#{raw news_feed.description}",length: 50) { link_to "Continue", "#{news_feed.url}" , target: :_blank} %></p>
-    <div class="post-meta"><span class="timestamp"><i class="fa fa-clock-">o</i> <%= time_ago_in_words(news_feed.published_on) %> ago.</span></div>
-  </div>
- </div>
-  </div>
+          <%= image_tag 'news-default.jpeg', :class => "media-object", :width => "150", :height => "150" %>
+        <% end %>
+  		</a>
+  		<div class="media-body">
+    		<h4 class="media-heading"><%= link_to news_feed.title, read_path(:news_feed_id => news_feed.id), method: :post,remote: true %></h4>
+          <p><%= raw (truncate("#{news_feed.description}",length: 100) { link_to "Continue", "#{news_feed.url}" , target: :_blank})%></p>
+          <ul class="list-inline list-unstyled">
+  			    <li><span><i class="glyphicon glyphicon-calendar"></i> <%= time_ago_in_words(news_feed.published_on) %> ago. </span></li>
+             <li>|</li>
+            <span><i class="glyphicon glyphicon-folder-open"></i> <%= NewsHub.find_by(id: news_feed.news_hub_id).name %></span>
+			    </ul>
+       </div>
+    </div>
+</div>
+<% if current_user.have_read?(news_feed) %>
+</div>
+<%end%>
+</div>
