--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -142,6 +142,12 @@ footer {
 
 /* miscellaneous */
 
+#overlay {
+  background:#000;
+  opacity:0.5;
+  filter: alpha(opacity=50);
+}
+
 .debug_dump {
   clear: both;
   float: left;
