--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,22 +1,18 @@
 <% provide(:title, "Home")%>
+
 <% if logged_in? %>
-  <div class="row">
-    <aside class="col-md-4">
-      <section class="user_info">
-        <%= render 'shared/user_info' %>
-      </section>
-    </aside>
-     <div class="col-md-8">
-      <h3>News Feed</h3>
+  
+      <h3>Latest Feed</h3>
       <%= render 'shared/feed' %>
-    </div>
-  </div>
+
+
 <% else %>
 
-<div class="center jumbotron">
-  <h1>Welcome to the News Hub</h1>
+  <div class="center jumbotron">
+    <h1>Welcome to the News Hub</h1>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-  <%= link_to "Log In!", login_path, class: "btn btn-lg btn-primary" %>
-</div>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "Log In!", login_path, class: "btn btn-lg btn-primary" %>
+  </div>
+
 <% end %>
