--- a/app/views/news_feeds/_news_feed.html.erb
+++ b/app/views/news_feeds/_news_feed.html.erb
@@ -8,7 +8,8 @@
         <% if news_feed.image_url != nil &&  news_feed.image_url != ""%>
           <%= image_tag news_feed.image_url, :class => "media-object", :width => "150", :height => "150" %>
         <% else %>
-          <%= image_tag 'news-default.jpeg', :class => "media-object", :width => "150", :height => "150" %>
+          <%= image_tag 'news-default-6fdc56426de3ffe5ab04a620c57cc5931a316e52d4d693454844a6664677b631.jpg
+', :class => "media-object", :width => "150", :height => "150" %>
         <% end %>
   		</a>
   		<div class="media-body">
