--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Home", root_path %>
 <% if logged_in? %>
     <%= link_to "Edit Profile", edit_user_path(current_user) %>
 
@@ -31,13 +32,3 @@
     <%= link_to "Login", login_path %>
     <%= link_to "Sign Up", signup_path%>
 <% end %>
-
- <!-- 
-    
-        <% NewsHub.all.each do |news_source| %>
-            <li>
-                <%= link_to news_source.name, news_source %>
-            </li>
-        <% end %>
-
-    -->
